--- a/paper/preamble.tex
+++ b/paper/preamble.tex
@@ -28,15 +28,22 @@
 \setlength{\abovedisplayskip}{0pt}
 \setlength{\belowdisplayskip}{0pt}
 
-\setlength{\textwidth}{7in} 
+\setlength{\textwidth}{7in}
 \setlength{\textheight}{9.75in}
 \setlength{\oddsidemargin}{-.25in}
 \setlength{\parskip}{0.15in}
 \setlength{\topmargin}{0in}
-\setlength{\headheight}{-.5in} 
+\setlength{\headheight}{-.5in}
 \setlength{\headsep}{0in}
 \setlength\parindent{0pt}
 
 %\titleformat{\chapter}
 %  {\normalfont\LARGE\bfseries}{\thechapter}{1em}{}
 %\titlespacing*{\chapter}{0pt}{3.5ex plus 1ex minus .2ex}{2.3ex plus .2ex}
+
+\newcommand{\beginsupplement}{
+  \setcounter{table}{0}
+  \renewcommand{\thetable}{S\arabic{table}}
+  \setcounter{figure}{0}
+  \renewcommand{\thefigure}{S\arabic{figure}}
+}
