make refs on new page and before supplemental section

--- a/paper/03-bayes_cpm_refs.Rmd
+++ b/paper/03-bayes_cpm_refs.Rmd
@@ -1,3 +1,10 @@
+\newpage
+
 # References {-}
 
 <!-- https://rmarkdown.rstudio.com/authoring_bibliographies_and_citations.html -->
+
+<!--https://bookdown.org/yihui/rmarkdown-cookbook/bibliography.html 
+to force refs before appendix/supplement -->
+
+<div id="refs"></div>
