--- a/paper/04-bayes_cpm_supp.Rmd
+++ b/paper/04-bayes_cpm_supp.Rmd
@@ -28,3 +28,33 @@ knitr::include_graphics(file.path(wd,"fig","sim_d_cdf_full.png"))
 ```{r simplt-cdf6, fig.cap="Bias in conditional CDF for censored simulations using loglog link", fig.align='center', out.width='90%'}
 knitr::include_graphics(file.path(wd,"fig","sim_d_cdf_cens.png"))
 ```
+
+
+```{r simplt-mn6, fig.cap="Bias in conditional mean for censored simulations using loglog link", fig.align='center', out.width='90%'}
+knitr::include_graphics(file.path(wd,"fig","sim_d_mn_cens.png"))
+```
+
+
+```{r simplt-med3, fig.cap="Bias in conditional median for uncensored simulations using logit link", fig.align='center', out.width='90%'}
+knitr::include_graphics(file.path(wd,"fig","sim_c_med_full.png"))
+```
+
+```{r simplt-med4, fig.cap="Bias in conditional median for censored simulations using logit link", fig.align='center', out.width='90%'}
+knitr::include_graphics(file.path(wd,"fig","sim_c_med_cens.png"))
+```
+
+```{r simplt-q80-3, fig.cap="Bias in conditional 80th percentile for uncensored simulations using logit link", fig.align='center', out.width='90%'}
+knitr::include_graphics(file.path(wd,"fig","sim_c_q80_full.png"))
+```
+
+```{r simplt-q80-4, fig.cap="Bias in conditional 80th percentile for censored simulations using logit link", fig.align='center', out.width='90%'}
+knitr::include_graphics(file.path(wd,"fig","sim_c_q80_cens.png"))
+```
+
+```{r simplt-q80-5, fig.cap="Bias in conditional 80th percentile for uncensored simulations using loglog link", fig.align='center', out.width='90%'}
+knitr::include_graphics(file.path(wd,"fig","sim_d_q80_full.png"))
+```
+
+```{r simplt-q80-6, fig.cap="Bias in conditional 80th percentile for censored simulations using loglog link", fig.align='center', out.width='90%'}
+knitr::include_graphics(file.path(wd,"fig","sim_d_q80_cens.png"))
+```
