--- a/paper/index.Rmd
+++ b/paper/index.Rmd
@@ -37,7 +37,7 @@ knitr::opts_chunk$set(echo = knitr::is_html_output())
 wd<-getwd()
 
 # load packages
-libs<-c("knitr", "kableExtra", "magrittr", "ggplot2", "rstan", "plotly", "bayesplot", "ggExtra")
+libs<-c("knitr", "kableExtra", "magrittr", "ggplot2", "rstan", "plotly", "bayesplot", "ggExtra", "xtable")
 invisible(lapply(libs, library, character.only = TRUE))
 ```
 
